# data-quality-agent

./: .gitignore  CLAUDE.md  README.md  README_CN.md  TASK.md  TASK_LLM_JUDGE.md  TASK_PHASE2.md  TASK_PHASE3.md  TASK_REFACTOR.md  TASK_REMAINING.md  pyproject.toml  rejected_docs.jsonl
arxiv_pipeline/: __init__.py  run.py
arxiv_pipeline/curation/: run.py
arxiv_pipeline/extraction/: latex_to_markdown.py
arxiv_pipeline/ingestion/: fetch_ar5iv.py  fetch_arxiv.py  hf_bulk.py
arxiv_pipeline/shared/: __init__.py  schema.py
benchmark_results/: alpaca_comparison.md  benchmark.json  benchmark.md
benchmark_results/contamination/: contamination.json  contamination.md
configs/: arxiv.yaml  default.yaml  llm.yaml.example  pretrain_zh.yaml  sft.yaml
dashboard/: package-lock.json  package.json  vite.config.ts
docs/: arxiv-pipeline-proposal.md
reports/: benchmark.json  benchmark.md
scripts/: align_with_datatrove.py  alignment_report.json  build_dashboard.py  sample_arxiv.py  test_katex_render.mjs  test_render.mjs
tests/: conftest.py  test_arxiv_filter.py  test_arxiv_s3_bulk.py  test_backend.py  test_badwords.py  test_benchmark.py  test_c4.py  test_classifier_substep.py  test_contamination.py  test_dedup.py  test_extraction_golden.py  test_filter_detailed.py  test_golden.py  test_gopher.py  test_language.py  test_llm_judge.py  test_llm_substep.py  test_markdown_quality.py  test_model_filters.py  test_pipeline.py  test_ray_runner.py  test_runner.py  test_sft_rules.py  test_sft_scorers.py  test_shard_resume.py  test_two_layer_benchmark.py  test_webdataset.py
(+162 files in other folders)
